Se versiona version base de test para aplicativo