@@ -1,324 +1,333 @@
 package com.bowlingpoints.service;
 
-import com.bowlingpoints.dto.TournamentDTO;
+import com.bowlingpoints.dto.*;
 import com.bowlingpoints.entity.*;
+import com.bowlingpoints.exception.BadRequestException;
+import com.bowlingpoints.exception.BusinessException;
+import com.bowlingpoints.exception.NotFoundException;
 import com.bowlingpoints.repository.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.*;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.dao.DataAccessResourceFailureException;
 
 import java.time.LocalDate;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Optional;
+import java.time.LocalDateTime;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class TournamentServiceTest {
-
-    @Mock
-    private TournamentRepository tournamentRepository;
-    @Mock
-    private AmbitRepository ambitRepository;
-    @Mock
-    private ModalityRepository modalityRepository;
-    @Mock
-    private CategoryRepository categoryRepository;
-    @Mock
-    private TournamentCategoryRepository tournamentCategoryRepository;
-    @Mock
-    private TournamentModalityRepository tournamentModalityRepository;
-    @Mock
-    private ResultRepository resultRepository;
 
     @InjectMocks
     private TournamentService tournamentService;
 
+    @Mock private TournamentRepository tournamentRepository;
+    @Mock private AmbitRepository ambitRepository;
+    @Mock private ModalityRepository modalityRepository;
+    @Mock private CategoryRepository categoryRepository;
+    @Mock private BranchRepository branchRepository;
+    @Mock private TournamentCategoryRepository tournamentCategoryRepository;
+    @Mock private TournamentModalityRepository tournamentModalityRepository;
+    @Mock private TournamentBranchRepository tournamentBranchRepository;
+    @Mock private ResultRepository resultRepository;
+    @Mock private TournamentRegistrationRepository tournamentRegistrationRepository;
+
+    private Tournament tournament;
+
     @BeforeEach
     void setUp() {
-        MockitoAnnotations.openMocks(this);
+        Ambit ambit = Ambit.builder()
+                .ambitId(1)
+                .name("Nacional")
+                .build();
+
+        tournament = Tournament.builder()
+                .tournamentId(1)
+                .name("Torneo de Prueba")
+                .organizer("Liga Nacional")
+                .ambit(ambit)
+                .startDate(LocalDate.now().plusDays(5))
+                .endDate(LocalDate.now().plusDays(7))
+                .status(true)
+                .build();
     }
 
+    // ===================== GET ALL =====================
+
     @Test
-    void getAll_ShouldReturnAllTournaments() {
-        // Arrange
-        Tournament tournament1 = Tournament.builder()
-                .tournamentId(1)
-                .name("Tournament 1")
-                .organizer("Organizer 1")
-                .startDate(LocalDate.now())
-                .endDate(LocalDate.now().plusDays(7))
-                .location("Location 1")
-                .stage("Stage 1")
-                .status(true)
-                .build();
-
-        Tournament tournament2 = Tournament.builder()
-                .tournamentId(2)
-                .name("Tournament 2")
-                .organizer("Organizer 2")
-                .startDate(LocalDate.now())
-                .endDate(LocalDate.now().plusDays(7))
-                .location("Location 2")
-                .stage("Stage 2")
-                .status(true)
-                .build();
-
+    void getAll_ShouldReturnTournamentList() {
         when(tournamentRepository.findAllByDeletedAtIsNullOrderByStartDateDesc())
-                .thenReturn(Arrays.asList(tournament1, tournament2));
+                .thenReturn(List.of(tournament));
+        when(tournamentRegistrationRepository.findByTournament_TournamentId(1))
+                .thenReturn(Collections.emptyList());
 
-        // Act
         List<TournamentDTO> result = tournamentService.getAll();
 
-        // Assert
-        assertEquals(2, result.size());
-        assertEquals("Tournament 1", result.get(0).getName());
-        assertEquals("Tournament 2", result.get(1).getName());
+        assertNotNull(result);
+        assertEquals(1, result.size());
         verify(tournamentRepository).findAllByDeletedAtIsNullOrderByStartDateDesc();
     }
 
     @Test
-    void getById_WhenTournamentExists_ShouldReturnTournament() {
-        // Arrange
-        Integer tournamentId = 1;
-        Tournament tournament = Tournament.builder()
-                .tournamentId(tournamentId)
-                .name("Test Tournament")
-                .organizer("Test Organizer")
-                .startDate(LocalDate.now())
-                .endDate(LocalDate.now().plusDays(7))
-                .location("Test Location")
-                .stage("Test Stage")
-                .status(true)
-                .build();
+    void getAll_ShouldHandleDatabaseException() {
+        when(tournamentRepository.findAllByDeletedAtIsNullOrderByStartDateDesc())
+                .thenThrow(new DataAccessResourceFailureException("DB error"));
 
-        when(tournamentRepository.findById(tournamentId)).thenReturn(Optional.of(tournament));
+        assertThrows(BusinessException.class, () -> tournamentService.getAll());
+    }
 
-        // Act
-        TournamentDTO result = tournamentService.getById(tournamentId);
+    // ===================== GET BY ID =====================
 
-        // Assert
+    @Test
+    void getById_ShouldReturnTournament() {
+        when(tournamentRepository.findById(1)).thenReturn(Optional.of(tournament));
+        when(tournamentRegistrationRepository.findByTournament_TournamentId(1))
+                .thenReturn(Collections.emptyList());
+
+        TournamentDTO result = tournamentService.getById(1);
+
         assertNotNull(result);
-        assertEquals(tournamentId, result.getTournamentId());
-        assertEquals("Test Tournament", result.getName());
-        verify(tournamentRepository).findById(tournamentId);
+        assertEquals("Torneo de Prueba", result.getName());
     }
 
     @Test
-    void getById_WhenTournamentDoesNotExist_ShouldReturnNull() {
-        // Arrange
-        Integer tournamentId = 1;
-        when(tournamentRepository.findById(tournamentId)).thenReturn(Optional.empty());
-
-        // Act
-        TournamentDTO result = tournamentService.getById(tournamentId);
-
-        // Assert
-        assertNull(result);
-        verify(tournamentRepository).findById(tournamentId);
+    void getById_ShouldThrowNotFound() {
+        when(tournamentRepository.findById(99)).thenReturn(Optional.empty());
+        assertThrows(NotFoundException.class, () -> tournamentService.getById(99));
     }
 
-    @Test
-    void create_ShouldCreateNewTournament() {
-        // Arrange
-        Integer ambitId = 1;
-        Ambit ambit = Ambit.builder()
-                .ambitId(ambitId)
-                .name("Test Ambit")
-                .build();
+    // ===================== CREATE =====================
 
+    @Test
+    void create_ShouldSaveTournamentWithCategoriesModalitiesAndBranches() {
         TournamentDTO dto = TournamentDTO.builder()
-                .name("New Tournament")
-                .organizer("New Organizer")
-                .ambitId(ambitId)
-                .startDate(LocalDate.now())
-                .endDate(LocalDate.now().plusDays(7))
-                .location("New Location")
-                .stage("New Stage")
-                .status(true)
+                .name("Torneo Nacional")
+                .organizer("Liga de Bowling")
+                .startDate(LocalDate.now().plusDays(2))
+                .endDate(LocalDate.now().plusDays(5))
+                .categoryIds(List.of(1))
+                .modalityIds(List.of(2))
+                .branches(List.of(BranchDTO.builder().branchId(3).build()))
                 .build();
 
-        when(ambitRepository.findById(ambitId)).thenReturn(Optional.of(ambit));
-        when(tournamentRepository.save(any(Tournament.class))).thenAnswer(invocation -> {
-            Tournament savedTournament = invocation.getArgument(0);
-            savedTournament.setTournamentId(1);
-            return savedTournament;
-        });
+        Tournament saved = Tournament.builder()
+                .tournamentId(100)
+                .name("Torneo Nacional")
+                .startDate(dto.getStartDate())
+                .endDate(dto.getEndDate())
+                .build();
 
-        // Act
+        Category category = Category.builder().categoryId(1).name("Senior").build();
+        Modality modality = Modality.builder().modalityId(2).name("Individual").build();
+        Branch branch = Branch.builder().branchId(3).name("Masculina").build();
+
+        when(tournamentRepository.save(any(Tournament.class))).thenReturn(saved);
+        when(categoryRepository.findById(1)).thenReturn(Optional.of(category));
+        when(modalityRepository.findById(2)).thenReturn(Optional.of(modality));
+        when(branchRepository.findById(3)).thenReturn(Optional.of(branch));
+        when(tournamentRegistrationRepository.findByTournament_TournamentId(anyInt()))
+                .thenReturn(Collections.emptyList());
+
         TournamentDTO result = tournamentService.create(dto);
 
-        // Assert
         assertNotNull(result);
-        assertEquals("New Tournament", result.getName());
-        assertEquals(ambitId, result.getAmbitId());
+        assertEquals("Torneo Nacional", result.getName());
         verify(tournamentRepository).save(any(Tournament.class));
-        verify(ambitRepository).findById(ambitId);
+        verify(categoryRepository).findById(1);
+        verify(modalityRepository).findById(2);
+        verify(branchRepository).findById(3);
+        verify(tournamentCategoryRepository).save(any(TournamentCategory.class));
+        verify(tournamentModalityRepository).save(any(TournamentModality.class));
+        verify(tournamentBranchRepository).save(any(TournamentBranch.class));
     }
 
     @Test
-    void update_WhenTournamentExists_ShouldUpdateTournament() {
-        // Arrange
-        Integer tournamentId = 1;
-        Integer ambitId = 1;
-        
-        Tournament existingTournament = Tournament.builder()
-                .tournamentId(tournamentId)
-                .name("Old Name")
-                .organizer("Old Organizer")
-                .startDate(LocalDate.now())
-                .endDate(LocalDate.now().plusDays(7))
-                .location("Old Location")
-                .stage("Old Stage")
-                .status(true)
-                .build();
-
-        Ambit ambit = Ambit.builder()
-                .ambitId(ambitId)
-                .name("Test Ambit")
-                .build();
-
-        TournamentDTO updateDto = TournamentDTO.builder()
-                .name("Updated Name")
-                .organizer("Updated Organizer")
-                .ambitId(ambitId)
-                .startDate(LocalDate.now())
-                .endDate(LocalDate.now().plusDays(14))
-                .location("Updated Location")
-                .stage("Updated Stage")
-                .status(true)
-                .build();
-
-        when(tournamentRepository.findById(tournamentId)).thenReturn(Optional.of(existingTournament));
-        when(ambitRepository.findById(ambitId)).thenReturn(Optional.of(ambit));
-        when(tournamentRepository.save(any(Tournament.class))).thenReturn(existingTournament);
-
-        // Act
-        boolean result = tournamentService.update(tournamentId, updateDto);
-
-        // Assert
-        assertTrue(result);
-        verify(tournamentRepository).findById(tournamentId);
-        verify(ambitRepository).findById(ambitId);
-        verify(tournamentRepository).save(any(Tournament.class));
-        verify(tournamentCategoryRepository).deleteAll(any());
-        verify(tournamentModalityRepository).deleteAll(any());
-
-        ArgumentCaptor<Tournament> tournamentCaptor = ArgumentCaptor.forClass(Tournament.class);
-        verify(tournamentRepository).save(tournamentCaptor.capture());
-        Tournament updatedTournament = tournamentCaptor.getValue();
-        assertEquals("Updated Name", updatedTournament.getName());
-        assertEquals("Updated Organizer", updatedTournament.getOrganizer());
-        assertEquals("Updated Location", updatedTournament.getLocation());
+    void create_ShouldThrowBadRequest_WhenDtoIsNull() {
+        assertThrows(BadRequestException.class, () -> tournamentService.create(null));
     }
 
     @Test
-    void update_WhenTournamentDoesNotExist_ShouldReturnFalse() {
-        // Arrange
-        Integer tournamentId = 1;
-        TournamentDTO updateDto = new TournamentDTO();
-        when(tournamentRepository.findById(tournamentId)).thenReturn(Optional.empty());
+    void create_ShouldThrowBadRequest_WhenInvalidDates() {
+        TournamentDTO dto = TournamentDTO.builder()
+                .name("Torneo Fallido")
+                .startDate(LocalDate.now().plusDays(5))
+                .endDate(LocalDate.now().plusDays(2))
+                .build();
 
-        // Act
-        boolean result = tournamentService.update(tournamentId, updateDto);
-
-        // Assert
-        assertFalse(result);
-        verify(tournamentRepository).findById(tournamentId);
-        verify(tournamentRepository, never()).save(any(Tournament.class));
+        assertThrows(BadRequestException.class, () -> tournamentService.create(dto));
     }
 
     @Test
-    void delete_WhenTournamentExists_ShouldMarkAsDeleted() {
-        // Arrange
-        Integer tournamentId = 1;
-        Tournament tournament = Tournament.builder()
-                .tournamentId(tournamentId)
-                .name("Test Tournament")
+    void create_ShouldThrowNotFound_WhenCategoryMissing() {
+        TournamentDTO dto = TournamentDTO.builder()
+                .name("Torneo Test")
+                .startDate(LocalDate.now().plusDays(2))
+                .endDate(LocalDate.now().plusDays(5))
+                .categoryIds(List.of(999))
+                .build();
+
+        when(tournamentRepository.save(any(Tournament.class)))
+                .thenReturn(tournament);
+        when(categoryRepository.findById(999))
+                .thenReturn(Optional.empty());
+
+        assertThrows(NotFoundException.class, () -> tournamentService.create(dto));
+    }
+
+    @Test
+    void create_ShouldThrowBusinessException_OnDatabaseError() {
+        TournamentDTO dto = TournamentDTO.builder()
+                .name("Torneo BD Error")
+                .startDate(LocalDate.now().plusDays(2))
+                .endDate(LocalDate.now().plusDays(5))
+                .build();
+
+        when(tournamentRepository.save(any(Tournament.class)))
+                .thenThrow(new DataAccessResourceFailureException("DB error"));
+
+        assertThrows(BusinessException.class, () -> tournamentService.create(dto));
+    }
+
+    // ===================== UPDATE =====================
+
+    @Test
+    void update_ShouldReturnTrue_WhenTournamentExists() {
+        TournamentDTO dto = TournamentDTO.builder()
+                .name("Actualizado")
+                .organizer("Nuevo Org")
+                .startDate(LocalDate.now().plusDays(1))
+                .endDate(LocalDate.now().plusDays(2))
                 .status(true)
                 .build();
 
-        when(tournamentRepository.findById(tournamentId)).thenReturn(Optional.of(tournament));
+        when(tournamentRepository.findById(1)).thenReturn(Optional.of(tournament));
         when(tournamentRepository.save(any(Tournament.class))).thenReturn(tournament);
+        when(tournamentCategoryRepository.findByTournament_TournamentId(anyInt()))
+                .thenReturn(Collections.emptyList());
+        when(tournamentModalityRepository.findByTournament_TournamentId(anyInt()))
+                .thenReturn(Collections.emptyList());
+        when(tournamentBranchRepository.findByTournament_TournamentId(anyInt()))
+                .thenReturn(Collections.emptyList());
 
-        // Act
-        boolean result = tournamentService.delete(tournamentId);
-
-        // Assert
+        boolean result = tournamentService.update(1, dto);
         assertTrue(result);
-        verify(tournamentRepository).findById(tournamentId);
-        
-        ArgumentCaptor<Tournament> tournamentCaptor = ArgumentCaptor.forClass(Tournament.class);
-        verify(tournamentRepository).save(tournamentCaptor.capture());
-        Tournament deletedTournament = tournamentCaptor.getValue();
-        assertFalse(deletedTournament.getStatus());
-        assertNotNull(deletedTournament.getDeletedAt());
     }
 
     @Test
-    void delete_WhenTournamentDoesNotExist_ShouldReturnFalse() {
-        // Arrange
-        Integer tournamentId = 1;
-        when(tournamentRepository.findById(tournamentId)).thenReturn(Optional.empty());
-
-        // Act
-        boolean result = tournamentService.delete(tournamentId);
-
-        // Assert
+    void update_ShouldReturnFalse_WhenTournamentNotFound() {
+        when(tournamentRepository.findById(99)).thenReturn(Optional.empty());
+        boolean result = tournamentService.update(99, new TournamentDTO());
         assertFalse(result);
-        verify(tournamentRepository).findById(tournamentId);
-        verify(tournamentRepository, never()).save(any(Tournament.class));
+    }
+
+    // ===================== DELETE =====================
+
+    @Test
+    void delete_ShouldSoftDeleteTournament() {
+        when(tournamentRepository.findById(1)).thenReturn(Optional.of(tournament));
+
+        boolean result = tournamentService.delete(1);
+
+        assertTrue(result);
+        verify(tournamentRepository).save(any(Tournament.class));
     }
 
     @Test
-    void getTournamentSummary_ShouldReturnCorrectSummary() {
-        // Arrange
-        Integer tournamentId = 1;
-        Tournament tournament = Tournament.builder()
-                .tournamentId(tournamentId)
-                .name("Test Tournament")
-                .organizer("Test Organizer")
-                .startDate(LocalDate.now())
-                .endDate(LocalDate.now().plusDays(7))
-                .location("Test Location")
+    void delete_ShouldReturnFalse_WhenNotFound() {
+        when(tournamentRepository.findById(99)).thenReturn(Optional.empty());
+        assertFalse(tournamentService.delete(99));
+    }
+
+    // ===================== TO DTO =====================
+
+    @Test
+    void toDTO_ShouldMapCategoriesModalitiesAndBranches() throws Exception {
+        Category category = Category.builder().categoryId(1).name("Senior").status(true).build();
+        Modality modality = Modality.builder().modalityId(2).name("Individual").status(true).build();
+        Branch branch = Branch.builder().branchId(3).name("Masculina").status(true).build();
+
+        Tournament entity = Tournament.builder()
+                .tournamentId(100)
+                .name("Torneo Test")
+                .categories(List.of(TournamentCategory.builder().category(category).build()))
+                .modalities(List.of(TournamentModality.builder().modality(modality).build()))
+                .branches(List.of(TournamentBranch.builder().branch(branch).build()))
                 .build();
 
-        TournamentModality tournamentModality = new TournamentModality();
-        Modality modality = new Modality();
-        modality.setName("Test Modality");
-        tournamentModality.setModality(modality);
+        when(tournamentRegistrationRepository.findByTournament_TournamentId(100))
+                .thenReturn(Collections.emptyList());
 
-        TournamentCategory tournamentCategory = new TournamentCategory();
-        Category category = new Category();
-        category.setName("Test Category");
-        tournamentCategory.setCategory(category);
+        var method = TournamentService.class.getDeclaredMethod("toDTO", Tournament.class);
+        method.setAccessible(true);
+        TournamentDTO dto = (TournamentDTO) method.invoke(tournamentService, entity);
 
-        tournament.setModalities(Collections.singletonList(tournamentModality));
-        tournament.setCategories(Collections.singletonList(tournamentCategory));
+        assertNotNull(dto);
+        assertEquals(1, dto.getCategories().size());
+        assertEquals(1, dto.getModalities().size());
+        assertEquals(1, dto.getBranches().size());
+    }
 
-        when(tournamentRepository.findById(tournamentId)).thenReturn(Optional.of(tournament));
-        when(resultRepository.countPlayersByGenderInTournament(tournamentId))
-                .thenReturn(new Object[]{5, 3}); // 5 masculine, 3 feminine
+    @Test
+    void toDTO_ShouldHandleNullLists() throws Exception {
+        Tournament entity = Tournament.builder()
+                .tournamentId(200)
+                .name("Torneo sin listas")
+                .build();
 
-        // Act
-        TournamentSummaryDTO result = tournamentService.getTournamentSummary(tournamentId);
+        when(tournamentRegistrationRepository.findByTournament_TournamentId(200))
+                .thenReturn(Collections.emptyList());
 
-        // Assert
-        assertNotNull(result);
-        assertEquals(tournamentId, result.getTournamentId());
-        assertEquals("Test Tournament", result.getTournamentName());
-        assertEquals("Test Organizer", result.getOrganizer());
-        assertEquals(1, result.getModalities().size());
-        assertEquals("Test Modality", result.getModalities().get(0));
-        assertEquals(1, result.getCategories().size());
-        assertEquals("Test Category", result.getCategories().get(0));
-        assertEquals(5, result.getTotalMasculino());
-        assertEquals(3, result.getTotalFemenino());
+        var method = TournamentService.class.getDeclaredMethod("toDTO", Tournament.class);
+        method.setAccessible(true);
+        TournamentDTO dto = (TournamentDTO) method.invoke(tournamentService, entity);
+
+        assertNotNull(dto);
+        assertTrue(dto.getCategories().isEmpty());
+        assertTrue(dto.getModalities().isEmpty());
+        assertTrue(dto.getBranches().isEmpty());
+    }
+
+    // ===================== SAVED BRANCHES =====================
+
+    @Test
+    void savedBranches_ShouldSaveBranchesSuccessfully() throws Exception {
+        BranchDTO branchDTO = BranchDTO.builder().branchId(1).name("Rama A").build();
+        Branch branch = Branch.builder().branchId(1).name("Rama A").build();
+        List<BranchDTO> branchDTOList = List.of(branchDTO);
+
+        when(branchRepository.findById(1)).thenReturn(Optional.of(branch));
+        when(tournamentBranchRepository.save(any(TournamentBranch.class))).thenReturn(null);
+
+        var method = TournamentService.class.getDeclaredMethod("savedBranches", List.class, Tournament.class);
+        method.setAccessible(true);
+        method.invoke(tournamentService, branchDTOList, tournament);
+
+        verify(branchRepository).findById(1);
+        verify(tournamentBranchRepository).save(any(TournamentBranch.class));
+    }
+
+    @Test
+    void savedBranches_ShouldThrowNotFound_WhenBranchMissing() throws Exception {
+        BranchDTO branchDTO = BranchDTO.builder().branchId(999).name("No existe").build();
+        List<BranchDTO> branchDTOList = List.of(branchDTO);
+
+        when(branchRepository.findById(999)).thenReturn(Optional.empty());
+
+        var method = TournamentService.class.getDeclaredMethod("savedBranches", List.class, Tournament.class);
+        method.setAccessible(true);
+
+        Exception exception = assertThrows(Exception.class, () ->
+                method.invoke(tournamentService, branchDTOList, tournament)
+        );
+
+        // Desempaquetar InvocationTargetException y validar la causa
+        Throwable cause = exception.getCause();
+        assertTrue(cause instanceof NotFoundException);
+        assertEquals("BRANCH_NOT_FOUND", ((NotFoundException) cause).getCode());
     }
 }
